--- a/Klausur Vorbereitung/document.tex
+++ b/Klausur Vorbereitung/document.tex
@@ -509,7 +509,7 @@ Anmerkungen:\\
 
 \begin{tabular}{lp{15cm}} 
 1.& Wahr, equals leitet auf (==) ab und es Existiert immer nur ein einziges Enum Objekt..\\
-2.& Wahr, All Implemented Interfaces: Serializable, Comparable<E>\\
+2.& Wahr, All Implemented Interfaces: Serializable, Comparable$<$E$>$\\
 3.& Wahr, aber sollte nicht oft verwendet werden da sich Math.PI einfacher bzw verständlicher liest als PI\\
 5.& Falsch, mir ist kein Beispiel bekannt bei dem es zulässig ist\\
 6.& Falsch, implementieren des Interfaces: java.lang.annotation.Annotation\\
